Arena changes and some others(that depends from DeathAction, GameEndAction) to create DeathAction\GameEndAction to make levelMaster usable in game to control state players team and enemies team, to control game ender